[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/StartScreen.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.345098, 0.917647, 0.415686, 1 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.917647, 0.345098, 0.345098, 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="."]
margin_left = 362.0
margin_top = 198.0
margin_right = 662.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 60 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "Name"
placeholder_alpha = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Age" type="LineEdit" parent="."]
margin_left = 362.0
margin_top = 300.0
margin_right = 662.0
margin_bottom = 358.0
rect_min_size = Vector2( 300, 60 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "Age"
placeholder_alpha = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 187.0
margin_top = 400.0
margin_right = 487.0
margin_bottom = 460.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 537.0
margin_top = 400.0
margin_right = 837.0
margin_bottom = 460.0
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="Age" to="." method="_on_Age_text_changed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
